# InteractionSimulator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
intersim/: __init__.py  box.py  collisions.py  datautils.py  expert.py  graph.py  simulator.py  utils.py  vehicletraj.py
intersim/default_graphs/: closestobstacle.py  conevisibility.py
intersim/default_policies/: idm.py  policy.py  rulepolicy.py
intersim/envs/: __init__.py  intersimple.py  simulator.py  simulator_jax.py
intersim/graphs/: __init__.py  closestobstacle.py  conevisibility.py
intersim/viz/: __init__.py  animatedviz.py  dict_utils.py  rasta.py  utils.py  wrappers.py
test_scripts/: old_test_idm.py  old_test_idm_graph.py  test_collision_stop.py  test_idm.py  test_state_targeting.py
tests/: test_animate-graph.py  test_animate.py  test_count_collision.py  test_datautils.py  test_idm_graph.py  test_rulepolicy.py  test_scc.py  test_simactions.py  test_simulator.py  test_vehicletraj.py
tests/intersim/: test_count_collision.py  test_datautils.py  test_graph.py  test_state_targeting.py  test_vehicletraj.py
tests/intersim/envs/: agent17_step10_5frames.npy  agent51frame0.npy  nrroute_agent76_frame0.npy  test_collision_stop.py  test_forward_propagation.py  test_intersim.py  test_intersimple.py  test_intersimple_agent.py  test_intersimple_flat.py  test_intersimple_idm.py  test_intersimple_lidar.py  test_intersimple_lidar_flat.py  test_intersimple_normalized.py  test_intersimple_random_agent.py  test_intersimple_random_location.py  test_intersimple_rasterized.py  test_intersimple_viz.py  (+4 more)
(+1 files in other folders)
