[tool.poetry]
name = "intersim"
version = "0.0.2"
description = "Simulator environment for INTERACTION driving dataset"
authors = ["Arec Jamgocian <jamgochian95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
torch = "^1.9.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
gym = "^0.19.0"
pyproj = "^3.1.0"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
